@@ -2,7 +2,7 @@
  *   Go buy a copy.
  *
  * Copyright (C) 1999 Dave Cole
- * Copyright (C) 2003 Bas Wijnen <shevek@fmf.nl>
+ * Copyright (C) 2003, 2006 Bas Wijnen <shevek@fmf.nl>
  * 
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -184,7 +184,7 @@ void sm_unhandled_set(StateMachine * sm, StateFunc state);
 gboolean sm_is_connected(StateMachine * sm);
 gboolean sm_connect(StateMachine * sm, const gchar * host,
 		    const gchar * port);
-void sm_use_fd(StateMachine * sm, gint fd);
+void sm_use_fd(StateMachine * sm, gint fd, gboolean do_ping);
 void sm_dec_use_count(StateMachine * sm);
 void sm_inc_use_count(StateMachine * sm);
 /** Dump the stack */
